--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
                                             <img src="images/icon_post.svg" alt="">
                                         </p>
                                         <p class="portfolio-text">PSD MOCKUP</p>
-                                        <p class="portfolio-sec-text">Smart Watch</p>
+                                        <p class="portfolio-sec-text">Smart Watch
+                                        </p>
                                     </div>
                                 </div>
                             </a>
@@ -358,8 +359,11 @@
                                             <p class="member-position">PSD GURU</p>
                                             <div class="member-content">
                                                 Eiusmod tempor incididunt ut dolore magna labore eiusmod. Lorem ipsum dolor sit amet consectetur est lorem adipisicing elit, sed do eiusmod tempor polor sit amet consectetur.<br>
+                                                <a href="pages/collections.html"><button class="btn collections "
+                                                    onclick="">See More <img src="images/icon_infinity.svg" alt="Load more"></button></a>
                                             </div>
                                         </div>
+                                        
                                         <div class="member-image-holder">
                                             <img src="demo-images/about_img_03.jpg" alt="">
                                         </div>
