added home links

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 
             <nav id="navbar" class="nav-menu navbar">
                 <ul>
-                    <li><a href="#hero" class="nav-link scrollto active">
+                    <li><a href="index.html" class="nav-link scrollto active">
                             <span>Home</span></a></li>
                     <li><a href="#about" class="nav-link scrollto"> <span>About</span></a>
                     </li>
