--- a/events.html
+++ b/events.html
@@ -31,8 +31,8 @@
         </a>
         <button class="fas fa-bars menu"></button>
         <ul>
+            <li><a data-cardname="events" onclick="showontop(event);" href="index.html">Home</a></li>
             <li><a data-cardname="blogs" onclick="showontop(event);" href="#blogs">Blogs</a></li>
-            <li><a data-cardname="events" onclick="showontop(event);" href="#event">Events</a></li>
             <li><a data-cardname="team" onclick="showontop(event);" href="#team">Team</a></li>
             <li><a data-cardname="about" onclick="showontop(event);" href="#about">About</a></li>
             <li><a data-cardname="contact" onclick="showontop(event);" href="#contact">Contact</a></li>
